fixed phone spacing issues

--- a/src/Banner/Banner.css
+++ b/src/Banner/Banner.css
@@ -10,17 +10,8 @@
   max-height: 600px;
   max-width: 950px; 
   min-width: 350px;
-  margin: 13vh auto;
+  margin: 12vh auto;
 }
-
-.cover { 
-  height: 100%;
-  background: no-repeat;
-  background-size: contain !important;
-  max-width: 750px; 
-  max-height: 400px; 
-  margin: 0
- }
 
 h2 {
   color: red;
