--- a/src/Contact/Contact.css
+++ b/src/Contact/Contact.css
@@ -1,9 +1,17 @@
+h5 {
+  font-size: 4.5vw !important;
+}
 
 .card {
   background-color: #6c757d00 !important;
   border: 5px solid #6c757d !important;
   border: none !important;
-  max-width: 600px;
+  max-width: 800px;
   margin: 10px auto !important;
 }
 
+@media screen and (min-width: 400px) {
+  h5 {
+    font-size: 30px !important;
+  }
+}
