--- a/src/ScoreBoard/ScoreBoard.css
+++ b/src/ScoreBoard/ScoreBoard.css
@@ -1,3 +1,17 @@
 .scoreboard {
-  max-width: 728px;
+  max-width: 364px;
+}
+
+.lgscreen {
+  display: none;
+}
+
+@media screen and (min-width: 400px) {
+  .scoreboard {
+    max-width: 728px;
+  }
+  
+  .smscreen {
+    display: none;
+  }
 }
